--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,7 +7,7 @@ name: Docker
 
 on:
   schedule:
-    - cron: '16 13 * * *'
+    - cron: '0 9 1 * *'
   push:
     branches: [ master ]
     # Publish semver tags as releases.
